try adding db setup to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,9 @@ language: php
 php:
   - 5.3
   - 5.4
+before_script:
+  - mysql -e 'create database jacked;'
+  - mysql -h 127.0.0.1 -u root jacked < schema/jacked_structure.sql
 script: phpunit test
+after_script:
+  - mysql -e 'drop database jacked;'
