--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
 RewriteRule ^module/([A-Za-z0-9]+)/?$ index.php?manage_module=$1 [QSA]
-RewriteRule ^handler/([A-Za-z0-9]+)/?$ index.php?handler=$1 [QSA]
+RewriteRule ^handler/([A-Za-z0-9\-]+)/?$ index.php?handler=$1 [QSA]
