--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: php
 php:
   - 5.6
 before_script:
-  - mysql -e 'create database jacked;'
+  - mysql -e 'create database jacked_test;'
   - mysql -h 127.0.0.1 -u root jacked < schema/jacked_structure.sql
 script: phpunit test/src
 after_script:
-  - mysql -e 'drop database jacked;'
+  - mysql -e 'drop database jacked_test;'
